# rea

./: .gitignore  .jscpd.json  .oxlintrc.json  .prettierignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_ar.md  README_ja.md  README_ko.md  README_zh.md  SECURITY.md  eslint.config.js  hopper_client.py  install.sh  knip.json  package-lock.json  package.json  pyproject.toml  release-please-config.json  server.py  tsconfig.build.json  tsconfig.json  turbo.json  typedoc.json  vitest.config.ts
.github/: pull_request_template.md  release-check-trigger
.husky/: pre-commit
bridge/: hopper_bridge.py
docs/: architecture.mermaid  browser-observation.md  controlled-javascript-replay.md  electron-observation.md  error-contract.schema.json  installation.md  investigation-workspaces.md  javascript-application-graph.md  javascript-application-workflows.md  javascript-artifact-reconstruction.md  javascript-runtime-reconciliation.md  managed-code-analysis.md  mcp-contracts.md  mcp-prompts.md  mcp-schema-report.json  process-capture.md  product-catalog.json  provider-evaluation.md  roadmap.md  user-visible-errors.csv  windows-ghidra-p0.md
metadata/: completion-manifest.json
scripts/: better-binary.mjs  build-cache.mjs  build-conformance-fixtures.mjs  check-dependency-install.mjs  check-doc-facts.mjs  check-typedoc.mjs  create-ghidra-windows-fixture.mjs  generate-completion-ledger.mjs  generate-completion-manifest.mjs  generate-error-schema.mjs  generate-mcp-schema-report.mjs  generate-package-metadata.mjs  generate-product-catalog.mjs  hopper-demo-x11.py  (+46 more)
(+3271 files in other folders)
