[project]
name = "betterBinaryMCP"
version = "0.1.0"
description = "Enhanced MCP server for Hopper Disassembler with reverse engineering tools"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
better-binary-mcp = "HopperProxyMCP.server:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"
